syntax = "proto3";
package bank;
option go_package="com.github/qcodelabsllc/qiggy;ms";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";


service QiggyBankService {
  rpc CreateQiggyBank(QiggyBank) returns (google.protobuf.StringValue);
  rpc GetQiggyBank(google.protobuf.StringValue) returns (QiggyBank);
  rpc UpdateQiggyBank(QiggyBank) returns (google.protobuf.Empty);
  rpc DeleteQiggyBank(google.protobuf.StringValue) returns (google.protobuf.Empty);
  rpc ListQiggyBanks(google.protobuf.Empty) returns (stream QiggyBankList);
}

message QiggyBankList {
  repeated QiggyBank banks = 1;
}

message QiggyBank {
  string id = 1;
  string customer_id = 2;
  double goal_amount = 3;
  double current_amount = 4;
  string description = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}